# manga-ocr-pyinstaller

./: .gitignore  MangaOcrPyInstaller.spec  main.py  pyproject.toml  readme.md
