[tool.poetry]
name = "manga-ocr-pyinstaller"
version = "0.1.0"
description = ""
authors = ["K-RT"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
manga-ocr = "==0.1.8"

[tool.poetry.dev-dependencies]
poethepoet = "^0.18.1"
pyinstaller = "==5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.12.0+cu116 torchvision==0.13.0+cu116 -f https://download.pytorch.org/whl/torch_stable.html"
force-remove-cuda11 = "python -m pip uninstall torch torchvision"